# LegioGameApp

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigureOpengl.bat  ConfigureVulkan.bat  Configure_Opengl_VS2022.bat  Configure_Vulkan_VS2022.bat  Dependencies.lua  GetDeps.py  Readme.md  premake5.lua
config/: editor.ini
src/: Application.cpp  main.cpp
